working on application test

--- a/src/CleanArchitecture/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/src/CleanArchitecture/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -20,4 +20,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalVisibleTo Include="CleanArchitecture.Application.UnitTests"/>
+  </ItemGroup>
+
 </Project>
