Gmail smtp configuration

--- a/src/CleanArchitecture/CleanArchitecture.Api/appsettings.Development.json
+++ b/src/CleanArchitecture/CleanArchitecture.Api/appsettings.Development.json
@@ -31,5 +31,10 @@
   "Outbox": {
     "IntervalInSeconds": 10,
     "BatchSize": 10
+  },
+  "GmailSettings": {
+    "Username": "vaxi.drez.social@gmail.com",
+    "Password": "klrfdxwytsqcwjno",
+    "Port": 587
   }
 }
